--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
+    <string name="mealoftheday">Meal of the Day</string>
+    <string name="weekschedule">Week Schedule</string>
+    <string name="stepbystep">Step by Step Recieps</string>
+    <string name="start">Start</string>
 </resources>
