--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,14 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
+    <string name="add_to_favourite">Add To Favourite</string>
+    <string name="title_activity_home">HomeActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_search">Search</string>
+    <string name="title_favourites">Favourites</string>
+    <string name="title_calender">Calender</string>
+    <string name="title_profile">Profile</string>
+    <string name="main_information">Main Information</string>
+    <string name="sync">Sync</string>
+    <string name="username">Username</string>
 </resources>
