implement search by three filter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,5 +46,7 @@
     <string name="favorite">Favorite</string>
     <string name="remove">remove</string>
     <string name="categories">Categories</string>
+    <string name="ingredient">Ingredient</string>
+    <string name="countries">Countries</string>
 
 </resources>
