handle user cycle

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,5 +48,6 @@
     <string name="categories">Categories</string>
     <string name="ingredient">Ingredient</string>
     <string name="countries">Countries</string>
+    <string name="signInWithGoogle">Sign in with Google</string>
 
 </resources>
