--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="sync">Sync</string>
     <string name="username">Username</string>
     <string name="mealoftheday">You Can Find daily Inspiration Recipes of Different Categories</string>
-    <string name="stepbystep">Step by Step Recieps</string>
+    <string name="stepbystep">Step by Step Recipes</string>
     <string name="start">Start</string>
     <string name="meal_name">Name</string>
     <string name="country">Country</string>
